# atp-practicum

./: .gitignore  Makefile.due  Makefile.link  Makefile.native  Makefile.pyd  __codelite.workspace
documentatie/: testplan.tex  testverslag.tex
huibonator/: .coverage  CMakeLists.txt  Constants.py  Controller.py  Effector.py  Gui.py  Makefile  Sensor.py  Simproxy.py  Simulator.py  Vessel.py  buffering.cpp  cppadapter.hpp  main.py  reversecpp.cc  reversecpp.cpp  test.py  testcases.py
huibonator/htmlcov/: Constants_py.html  Effector_py.html  Sensor_py.html  Simproxy_py.html  Simulator_py.html  Vessel_py.html  index.html  status.json  testcases_py.html
huibonator/testshit/: control.py  proxy.py  sim.py
hw_dummy/: _codelite.project  main.cpp
hw_server/: _codelite.project  main.cpp
include/: lemonator_dummy.hpp  lemonator_hardware.hpp  lemonator_proxy.hpp  lemonator_server.hpp  sr04.hpp
lemonator-simulator/: Constants.py  Controller.py  Disturbance.py  Effector.py  Gui.py  Simproxy.py  Simulator.py  Vessel.py  main.py  testcases.py
lemonator-simulator/htmlcov/: Sensor_py.html  Vessel_py.html  index.html
lemonator-simulator/tests/: control.py  proxy.py  sim.py
pc_cpp/: Makefile  _codelite.project  interface.cpp  main.cpp
pc_python/: Controller.py  Controllertests.py  Makefile  _codelite.project  lemonator.cpp  lemonator.pyd  main.cpp  test.py
simulator/: .coverage  AbstractProxy.py  CPPController.cpp  CPPController.hpp  CustomController.py  SimProxy.py  main.py  testCPPController.py  testCustomController.py  testPlantFunctionality.py  testPlantInterface.py
(+21 files in other folders)
